SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/SPARCS_Proposal__c.object-meta.xml
<CustomObject>
    <label>SPARCS Proposal</label>
    <nameField>
        <label>Proposal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPARCS Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>