SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPARCS Proposals</relationshipLabel>
    <relationshipName>SPARCS_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>