SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Account_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Text__c</fullName>
    <label>Account ID Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>