SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Application_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Deadline__c</fullName>
    <label>Application Submission Deadline</label>
    <type>Date</type>
</CustomField>