SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Ask_Date__c.field-meta.xml
<CustomField>
    <fullName>Ask_Date__c</fullName>
    <label>Ask Date</label>
    <type>Date</type>
</CustomField>