SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Checked_Date__c</fullName>
    <label>Checked Date</label>
    <type>Date</type>
</CustomField>