SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Direct_Sponsor_Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sponsor_Reporting_Category__c</fullName>
    <label>Direct Sponsor Reporting Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>