SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Inserted_In_Mass__c.field-meta.xml
<CustomField>
    <fullName>Inserted_In_Mass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inserted In Mass</label>
    <type>Checkbox</type>
</CustomField>