SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Internal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Internal_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Entry</label>
    <type>Checkbox</type>
</CustomField>