SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Location_Of_Research__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Research__c</fullName>
    <label>Location Of Research</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>