SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/NonFed_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>NonFed_Opportunity_ID__c</fullName>
    <label>NonFed Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>