SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Opp_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contact_Role__c</fullName>
    <label>Opp Contact Role</label>
    <length>72</length>
    <type>Text</type>
</CustomField>