SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Engagement Opportunity this Proposal is linked to</description>
    <inlineHelpText>The Business Engagement Opportunity this Proposal is linked to</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SPARCS Proposals</relationshipLabel>
    <relationshipName>SPARCS_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>