SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Opportunity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Subtype__c</fullName>
    <label>Opportunity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>