SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/OSP_Specialist__c.field-meta.xml
<CustomField>
    <fullName>OSP_Specialist__c</fullName>
    <label>OSP Specialist</label>
    <length>64</length>
    <type>Text</type>
</CustomField>