SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Prime_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Prime_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prime Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPARCS Proposals (Prime Sponsor)</relationshipLabel>
    <relationshipName>SPARCSPrimeSponsorProposals</relationshipName>
    <type>Lookup</type>
</CustomField>