SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Prime_Sponsor_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Prime_Sponsor_ID_Text__c</fullName>
    <label>Prime Sponsor ID Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>