SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Principle_Investigator_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Principle_Investigator_Employee_ID__c</fullName>
    <label>Principle Investigator Employee ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>