SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>