SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Proposal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Start_Date__c</fullName>
    <label>Proposal Start Date</label>
    <type>Date</type>
</CustomField>