SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Proposal_Title__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Title__c</fullName>
    <label>Proposal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>