SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Research_Coordinator_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Research_Coordinator_Employee_ID__c</fullName>
    <label>Research Coordinator Employee ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>