SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/SPARCS_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>SPARCS_Opportunity_ID__c</fullName>
    <label>SPARCS Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>