SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/SPARCS_Opportunity_Title__c.field-meta.xml
<CustomField>
    <fullName>SPARCS_Opportunity_Title__c</fullName>
    <label>SPARCS Opportunity Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>