SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/SPARCS_Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>SPARCS_Proposal_Name__c</fullName>
    <label>SPARCS Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>