SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Submitting_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Department_Name__c</fullName>
    <label>Submitting Department Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>