SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Submitting_Department_Number__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Department_Number__c</fullName>
    <label>Submitting Department Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>