SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Total_Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Costs__c</fullName>
    <label>Total Direct Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>