SPARCSProposal/force-app/main/default/objects/SPARCS_Proposal__c/fields/Type_Of_Application__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Application__c</fullName>
    <label>Type Of Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>